--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,6 @@
+/* Quick Reset */
+	h1,h2,h3,h4,h5,p,form,ol,li,ul { margin: 0; padding: 0; }
+
 /* Page Body */
 body {
 	font-family: Arial, Helvetica, sans-serig;
@@ -58,13 +61,7 @@ h5 {
 }
 
 /* Forms */
-form {
-	border: 1px solid orange;
-	position: relative;
-			top: 10px;
-			padding: 20px;
-			margin: 10px;
-}
+
 label {
 	display: block;
 	clear: both;
@@ -77,7 +74,7 @@ input, select, textarea {
 	width: 57%;
 }
 input { border: 1px solid #666 }
-input[type=radio], input[type=checkbox], input[type-submit],
+input[type=radio], input[type=checkbox], input[type=submit],
 input[type=reset], input[type=button], input[type=image] {
 	width: auto;
 }
